# resolution-backend

./: .env.example  .gitignore  API_SETUP_GUIDE.md  CLAUDE.md  LANGSMITH_REMOVAL.md  LANGSMITH_REMOVAL_GUIDE.md  LOCAL_SETUP.md  Procfile  TESTING_AND_DEPLOYMENT.md  langgraph.json  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements.txt  setup.sh  test_precedent_system.py
dataset/agent/: agent_state.json
dataset/documents/: A - Closure of GOR.md  E - Email - 15 May 2009.md  G - FRAMEWORK AGREEMENT FOR THE PROVISION OF ICT CONSULTANCY SERVICES.md  H - INTERNAL MEMORANDUM.md  I - Invoice (1).md  J - Invoice (2).md  K - Invoice (disputed 1).md  M - Payment_Ledger_Minimum_Commitment_E-Nik_Style.md  S - Witness statement Dawett.md  T -  Invoice (disputed 2).md
docs/: case_law_workflow_diagram.html  documents_workflow_diagram.html  soc_agent_diagram.html
frontend-examples/: README.md  eventSchemaRegistry.ts  langsmith_pipeline_events.ts  package.json
resolution-ai/: README.md
resolution-ai/dataset/: judgement_input.json
resolution-ai/docs/: case_law_workflow_diagram.html
resolution-ai/frontend-examples/: README.md  agentEventTypes.ts  package-lock.json  package.json  tsconfig.json
resolution-ai/src/: documents_workflow.py  http_routes.py  judgement_workflow.py  soc_agent.py
src/: case_law_workflow.py  cos_agent.py  demo_event_pipeline.py  http_routes.py  multi_issue_workflow.py  soc_agent.py
src/case_law/: case_law_state.py
src/documents/: documents_state.py
src/examples/: case_law_workflow_example.py  search_case_law_example.py  (+1 more)
(+70 files in other folders)
